test/invalid/baseline/duplicate-escaped.txt
Syntax error at line 2, since `interface Iroha`:
interface _Iroha {};
                 ^ The name "Iroha" of type "interface" was already seen
